# django-dummy

./: .pre-commit-config.yaml  README.md  create_super_user.py  install_django_dummy.ps1  pyproject.toml  requirements.in  requirements.txt
project/: asgi.py  settings.py  urls.py  wsgi.py
project/templates/: base.html
