[tool.black]
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.curlylint.rules]
image_alt = true

[tool.poetry]
name = "django-dummy"
version = "0.1.0"
description = "Barebone Django instance"
authors = ["andywar65 <andy.war1965@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.2"
environs = {extras = ["django"], version = "^9.5.0"}
django-htmx = "^1.14.0"
django-bootstrap-v5 = "^1.0.11"
django-debug-toolbar = "^4.0.0"
factory-boy = "^3.2.1"
coverage = "^7.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
